[project]
name = "cdt-plusplus-scripts"
# PEP 440 spelling of the CDT++ v1.0.0-rc1 release.
version = "1.0.0rc1"
description = "Python support and experiment scripts for CDT++"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
cdt-mnist-experiment = "scripts.mnist_experiment:main"
cdt-optimize-initialize = "scripts.optimize_initialize:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]
package = true

[tool.uv.build-backend]
module-name = "scripts"
module-root = ""
source-exclude = [
  "scripts/*.bat",
  "scripts/*.sh",
  "scripts/release_check.py",
  "scripts/semgrep_fixture_config.py",
  "scripts/tests/**",
]

[dependency-groups]
dev = [
  "actionlint-py==1.7.12.24",
  "clang-format==22.1.8",
  "pyyaml==6.0.3",
  "ruff==0.15.21",
  "semgrep==1.169.0",
  "ty==0.0.59",
  "yamllint==1.38.0",
]
experiments = [
  "comet-ml>=3.58.3,<4",
  "matplotlib>=3.10,<4",
  "numpy>=2,<3",
  "tensorflow>=2.21,<2.22",
]

[tool.ruff]
line-length = 160
src = ["scripts"]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "ANN201",
  "ANN202",
  "ANN204",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "FA",
  "T10",
  "EM",
  "EXE",
  "FIX",
  "FLY",
  "FURB",
  "ISC",
  "ICN",
  "LOG",
  "G",
  "INP",
  "PERF",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "SLOT",
  "TC",
  "TID",
  "TD",
  "ARG",
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "NPY",
  "RUF",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
]
fixable = ["ALL"]
ignore = [
  "COM812",  # Conflicts with the formatter.
  "ERA001",  # Historical experiment alternatives remain documented inline.
  "FBT001",  # Boolean CLI parameters are idiomatic when these scripts gain CLIs.
  "FBT002",  # Boolean CLI defaults are idiomatic when these scripts gain CLIs.
  "ISC001",  # Conflicts with the formatter.
  "PLR2004", # Scientific constants are clearer at their point of use.
  "T201",    # These scripts intentionally report progress on the command line.
  "TRY300",  # Straight-line experiment control flow is clearer here.
  "TRY301",  # Local exception construction is sufficient for these scripts.
]

[tool.ruff.lint.per-file-ignores]
"scripts/tests/test_*.py" = [
  "PT009", # The dependency-free support-script suite intentionally uses unittest.
  "PT027", # The dependency-free support-script suite intentionally uses unittest.
]
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
